# VibeShader

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
cmake/: CompileShaders.cmake
shaders/: fullscreen.frag  fullscreen.vert  raytracer.frag  triangle.frag  triangle.vert
src/: main.cc
src/graphics/: buffer_util.cc  buffer_util.h  mesh_loader.cc  mesh_loader.h  pipeline.cc  pipeline.h  renderer.cc  renderer.h  shader_module.cc  shader_module.h  swapchain.cc  swapchain.h  vulkan_context.cc  vulkan_context.h
tests/: CMakeLists.txt  placeholder_test.cc
